# sfml-breakout

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh
Breakout/: CMakeLists.txt
Breakout/Assets/: Manifest.json
Breakout/Assets/Shaders/: glow.frag
Breakout/Content/Blueprints/: Circle.json
Breakout/Content/Levels/: Definitions.json  Level_1.txt  Level_2.txt  Level_3.txt
Breakout/Content/Scenes/: DemoScene.yml
Breakout/Content/Scripts/: MyScript.lua
Breakout/Source/: Breakout.cpp  Breakout.h  Main.cpp
Breakout/Source/GameStates/Gameplay/: GameplayState.cpp  GameplayState.h
Breakout/Source/GameStates/Gameplay/Components/: GameSession.h  Lives.h  MaxLevel.h  Multiplier.h
Breakout/Source/GameStates/MainMenu/: MainMenuState.cpp  MainMenuState.h
Breakout/Source/GameStates/Menu/: MenuState.cpp  MenuState.h
Breakout/Source/Modules/: BreakoutModule.cpp  BreakoutModule.h
Breakout/Source/Modules/Breakout/: BreakoutModule.cpp
Breakout/Source/Modules/Breakout/Components/: AttachedToPaddle.h  Block.h
Breakout/Source/Modules/Breakout/Prefabs/: ExitGameIntent.h  LaunchBallIntent.h  MoveRightCommand.h  PauseGameIntent.h  RestartGameIntent.h  ResumeGameIntent.h  StartGameIntent.h  TransitionGameStateIntent.h
Breakout/Source/Modules/Breakout/Singletons/: Score.h  (+5 more)
Breakout/Source/Modules/Debug/: DebugModule.cpp  DebugModule.h
Breakout/Source/Scenes/BouncingBall/: BouncingBallScene.cpp  BouncingBallScene.h
Breakout/Source/Scenes/ControllerDemo/: ControllerDemoScene.cpp  ControllerDemoScene.h
Breakout/Source/Scenes/Debug/: DebugScene.cpp  DebugScene.h
Breakout/Source/Scenes/GameOver/: GameOverScene.cpp  GameOverScene.h
Breakout/Source/Scenes/GameWon/: GameWonScene.cpp  GameWonScene.h
Breakout/Source/Scenes/Gameplay/: GameplayScene.cpp  GameplayScene.h
Breakout/Source/Scenes/Hud/: HudScene.cpp  HudScene.h
Breakout/Source/Scenes/MainMenu/: MainMenuScene.cpp  MainMenuScene.h
Breakout/Source/Scenes/Menu/: MenuScene.cpp  MenuScene.h
Breakout/Source/Scenes/Pause/: PauseScene.cpp  PauseScene.h
Breakout/TestBed/: CMakeLists.txt
Source/: CMakeLists.txt
Source/Animations/: CMakeLists.txt
Source/Animations/Private/: Animations.cpp  Animations.h  Application.cpp  Application.h  Main.cpp
Source/Animations/Private/Blueprints/: TextBlueprint.cpp
Source/Animations/Private/Components/: Animation.h  AnimationComponent.h  BoundingBoxComponent.h  DebugComponent.h  Drawable.h  EventComponent.h  ForGarbageCollectionComponent.h  FpsComponent.h  PlayerPossessedComponent.h  Transform.h  TransformComponent.h
Source/Animations/Private/Events/: BallCountChangedEvent.h  BallCountRequestedEvent.h  ExitGameRequestedEvent.h  RequestBallCountEvent.h  RequestGameExit.h  ResumeGameRequestedEvent.h
Source/Animations/Private/Gameplay/: MainMenuState.cpp  MainMenuState.h
Source/Animations/Private/Scenes/: BlueDemoScene.cpp  BlueDemoScene.h  BouncingBallFlecsScene.cpp  BouncingBallFlecsScene.h  BouncingBallScene.cpp  BouncingBallScene.h  DebugScene.cpp  DebugScene.h  DemoScene.cpp  DemoScene.h  PauseScene.cpp  PauseScene.h  RedDemoScene.cpp  RedDemoScene.h
Source/Animations/Private/Systems/: AnimationSystem.cpp  AnimationSystem.h  CleanUpSystem.cpp  CleanUpSystem.h  DrawableRenderer.cpp  DrawableRenderer.h  EventSystem.cpp  EventSystem.h  FpsSystem.cpp  FpsSystem.h
Source/Animations/Public/: ApplicationConfiguration.h  PhysicsConstants.h
Source/Core/: CMakeLists.txt
Source/Core/Private/: GameInstance.cpp  Logger.cpp
Source/Core/Private/Factories/: EntityFactory.cpp  SceneFactory.cpp
Source/Core/Private/GameStates/: GameController.cpp  GameState.cpp
Source/Core/Private/Gameplay/: GameController.cpp  GameState.cpp
Source/Core/Private/Managers/: AudioManager.cpp  EventManager.cpp  FileManager.cpp  GameService.cpp  ResourceManager.cpp  SceneManager.cpp
Source/Core/Private/Scenes/: Entity.cpp  Scene.cpp
Source/Core/Private/Systems/: AnimationSystem.cpp  DrawableRenderer.cpp  PhysicsSystem.cpp  ScreenBounceSystem.cpp  System.cpp
Source/Core/Public/: Configuration.h  GameInstance.h  PhysicsConstants.h
Source/Core/Public/Components/: DrawableComponent.h  GravitySettings.h  PhysicsComponent.h  RenderTarget.h  RigidBody.h  TransformComponent.h  Velocity.h
Source/Core/Public/Core/: GameInstance.h  Logger.h
Source/Core/Public/Factories/: EntityFactory.h  SceneFactory.h
Source/Core/Public/GameStates/: GameState.h
Source/Core/Public/Gameplay/: GameController.h  GameState.h
Source/Core/Public/Managers/: AudioManager.h  EventManager.h  FileManager.h  GameService.h  ResourceManager.h  SceneManager.h
Source/Core/Public/Scenes/: Component.h  Entity.h  Scene.h
Source/Core/Public/Systems/: AnimationSystem.h  DrawableRenderer.h  PhysicsSystem.h  ScreenBounceSystem.h  System.h
Source/Core/Public/Themes/: Nord.h
Source/Core/Public/Utilities/: SFML.h
Source/MiniRts/: CMakeLists.txt
Source/MiniRts/Private/Components/: AnimationStateComponent.h  MoveToOrderComponent.h  MovementComponent.h  SelectedComponent.h  TargetComponent.h
Source/MiniRts/Private/Scenes/: MiniRtsScene.cpp
Source/MiniRts/Private/Systems/: DrawSelection.cpp  DrawSelection.h  MovementSystem.cpp  MovementSystem.h
Source/MiniRts/Public/: MiniRtsScene.h
Source/MyGame/: CMakeLists.txt
Source/MyGame/Private/: Main.cpp  MyGame.cpp  MyGame.h
Source/MyGame/Private/Blueprints/: CircleBlueprint.cpp  CircleBlueprint.h  TextBlueprint.h
Source/MyGame/Private/Components/: BackgroundRenderable.h  BallRenderable.h  Transform.h
Source/MyGame/Private/Events/: ExitGame.h  NavigateToMainMenu.h  RequestGameResume.h  RequestReturnToMainMenu.h  RequestStartGame.h  ResumeGame.h  StartGame.h
Source/MyGame/Private/Gameplay/: GameplayState.cpp  GameplayState.h  MainMenuState.cpp  MainMenuState.h
Source/MyGame/Private/Prefabs/: Ball.cpp  Ball.h
Source/MyGame/Private/Scenes/: BouncingBallScene.cpp  BouncingBallScene.h  DebugScene.cpp  DebugScene.h  MainMenuScene.cpp  MainMenuScene.h  PauseScene.cpp  PauseScene.h
Source/TestBed/: CMakeLists.txt  Main.cpp
(+338 files in other folders)
